--- a/modules/activiti-dmn-json-converter/pom.xml
+++ b/modules/activiti-dmn-json-converter/pom.xml
@@ -31,8 +31,12 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <scope>test</scope>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+     <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
