--- a/modules/activiti-engine/pom.xml
+++ b/modules/activiti-engine/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -72,12 +72,13 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -151,6 +152,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
     </dependency>
@@ -163,8 +169,8 @@
       <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -172,7 +178,6 @@
     <dependency>
       <groupId>org.codehaus.btm</groupId>
       <artifactId>btm</artifactId>
-      <version>2.1.3</version>
       <scope>test</scope>
     </dependency>
 
@@ -365,9 +370,9 @@
                   <tasks>
                     <echo message="updating activiti configuration to db ${database}" />
                     <copy file="${basedir}/../../qa/db/activiti.cfg.xml"
-                      todir="target/test-classes" overwrite="true">
+                          todir="target/test-classes" overwrite="true">
                       <filterset
-                        filtersfile="${user.home}/.activiti/jdbc/build.activiti6.${database}.properties" />
+                          filtersfile="${user.home}/.activiti/jdbc/build.activiti6.${database}.properties" />
                     </copy>
                   </tasks>
                 </configuration>
@@ -382,7 +387,7 @@
                   <tasks>
                     <echo message="dropping schema in ${database}" />
                     <java classname="org.activiti.engine.impl.db.DbSchemaDrop"
-                      classpathref="maven.test.classpath" />
+                          classpathref="maven.test.classpath" />
                   </tasks>
                 </configuration>
               </execution>
@@ -416,11 +421,11 @@
                 <configuration>
                   <tasks>
                     <echo
-                      message="updating activiti configuration to db ${databasewithschema}" />
+                        message="updating activiti configuration to db ${databasewithschema}" />
                     <copy file="${basedir}/../../qa/db/schema/activiti.cfg.xml"
-                      todir="target/test-classes" overwrite="true">
+                          todir="target/test-classes" overwrite="true">
                       <filterset
-                        filtersfile="${user.home}/.activiti/jdbc/build.activiti6.${databasewithschema}.properties" />
+                          filtersfile="${user.home}/.activiti/jdbc/build.activiti6.${databasewithschema}.properties" />
                     </copy>
                   </tasks>
                 </configuration>
@@ -435,7 +440,7 @@
                   <tasks>
                     <echo message="dropping schema in ${databasewithschema}" />
                     <java classname="org.activiti.engine.impl.db.DbSchemaDrop"
-                      classpathref="maven.test.classpath" />
+                          classpathref="maven.test.classpath" />
                   </tasks>
                 </configuration>
               </execution>
@@ -470,9 +475,9 @@
                   <tasks>
                     <echo message="updating activiti configuration to db ${databasemssql}" />
                     <copy file="${basedir}/../../qa/db/mssql/activiti.cfg.xml"
-                      todir="target/test-classes" overwrite="true">
+                          todir="target/test-classes" overwrite="true">
                       <filterset
-                        filtersfile="${user.home}/.activiti/jdbc/build.activiti6.${databasemssql}.properties" />
+                          filtersfile="${user.home}/.activiti/jdbc/build.activiti6.${databasemssql}.properties" />
                     </copy>
                   </tasks>
                 </configuration>
@@ -503,12 +508,12 @@
                 <configuration>
                   <tasks>
                     <echo
-                      message="updating activiti configuration config to db ${database}" />
+                        message="updating activiti configuration config to db ${database}" />
                     <copy
-                      file="${basedir}/../../qa/spring/${database}/activiti.cfg.xml"
-                      todir="target/test-classes" overwrite="true">
+                        file="${basedir}/../../qa/spring/${database}/activiti.cfg.xml"
+                        todir="target/test-classes" overwrite="true">
                       <filterset
-                        filtersfile="${user.home}/.activiti/jdbc/build.${database}.properties" />
+                          filtersfile="${user.home}/.activiti/jdbc/build.${database}.properties" />
                     </copy>
                   </tasks>
                 </configuration>
@@ -523,7 +528,7 @@
                   <tasks>
                     <echo message="dropping schema in ${database}" />
                     <java classname="org.activiti.engine.impl.db.DbSchemaDrop"
-                      classpathref="maven.test.classpath" />
+                          classpathref="maven.test.classpath" />
                   </tasks>
                 </configuration>
               </execution>
@@ -572,13 +577,13 @@
                 <configuration>
                   <tasks>
                     <echo
-                      message="Copying jta enabled Activiti configuration file to target/test-classes" />
+                        message="Copying jta enabled Activiti configuration file to target/test-classes" />
                     <echo
-                      message="Updating activiti configuration config to db ${database}" />
+                        message="Updating activiti configuration config to db ${database}" />
                     <copy file="${basedir}/../../qa/jta/${database}/activiti.cfg.xml"
-                      todir="target/test-classes" overwrite="true">
+                          todir="target/test-classes" overwrite="true">
                       <filterset
-                        filtersfile="${user.home}/.activiti/jdbc/build.${database}.properties" />
+                          filtersfile="${user.home}/.activiti/jdbc/build.${database}.properties" />
                     </copy>
                   </tasks>
                 </configuration>
@@ -593,7 +598,7 @@
                   <tasks>
                     <echo message="dropping schema in ${database}" />
                     <java classname="org.activiti.engine.impl.db.DbSchemaDrop"
-                      classpathref="maven.test.classpath" />
+                          classpathref="maven.test.classpath" />
                   </tasks>
                 </configuration>
               </execution>
@@ -642,9 +647,9 @@
                 <configuration>
                   <tasks>
                     <echo
-                      message="updating activiti configuration to qa/cfg/historyfull.activiti.cfg.xml" />
+                        message="updating activiti configuration to qa/cfg/historyfull.activiti.cfg.xml" />
                     <copy file="${basedir}/../../qa/cfg/historyfull.activiti.cfg.xml"
-                      tofile="target/test-classes/activiti.cfg.xml" overwrite="true" />
+                          tofile="target/test-classes/activiti.cfg.xml" overwrite="true" />
                   </tasks>
                 </configuration>
               </execution>
@@ -688,14 +693,14 @@
                 <configuration>
                   <tasks>
                     <echo
-                      message="updating activiti configuration to db ${database}, using FULL history" />
+                        message="updating activiti configuration to db ${database}, using FULL history" />
                     <copy file="${basedir}/../../qa/db/historyfull.activiti.cfg.xml"
-                      todir="target/test-classes" overwrite="true">
+                          todir="target/test-classes" overwrite="true">
                       <filterset
-                        filtersfile="${user.home}/.activiti/jdbc/build.${database}.properties" />
+                          filtersfile="${user.home}/.activiti/jdbc/build.${database}.properties" />
                     </copy>
                     <rename src="target/test-classes/historyfull.activiti.cfg.xml"
-                      dest="target/test-classes/activiti.cfg.xml" />
+                            dest="target/test-classes/activiti.cfg.xml" />
                   </tasks>
                 </configuration>
               </execution>
@@ -709,7 +714,7 @@
                   <tasks>
                     <echo message="dropping schema in ${database}" />
                     <java classname="org.activiti.engine.impl.db.DbSchemaDrop"
-                      classpathref="maven.test.classpath" />
+                          classpathref="maven.test.classpath" />
                   </tasks>
                 </configuration>
               </execution>
@@ -723,7 +728,7 @@
                   <tasks>
                     <echo message="dropping schema in ${database}" />
                     <java classname="org.activiti.engine.impl.db.DbSchemaDrop"
-                      classpathref="maven.test.classpath" />
+                          classpathref="maven.test.classpath" />
                   </tasks>
                 </configuration>
               </execution>
@@ -754,16 +759,16 @@
                 <configuration>
                   <tasks>
                     <echo
-                      message="updating activiti configuration to db ${database}, using FULL history" />
+                        message="updating activiti configuration to db ${database}, using FULL history" />
                     <copy
-                      file="${basedir}/../../qa/db/historyfull-with-schema.activiti.cfg.xml"
-                      todir="target/test-classes" overwrite="true">
+                        file="${basedir}/../../qa/db/historyfull-with-schema.activiti.cfg.xml"
+                        todir="target/test-classes" overwrite="true">
                       <filterset
-                        filtersfile="${user.home}/.activiti/jdbc/build.${databasewithschema}.properties" />
+                          filtersfile="${user.home}/.activiti/jdbc/build.${databasewithschema}.properties" />
                     </copy>
                     <rename
-                      src="target/test-classes/historyfull-with-schema.activiti.cfg.xml"
-                      dest="target/test-classes/activiti.cfg.xml" />
+                        src="target/test-classes/historyfull-with-schema.activiti.cfg.xml"
+                        dest="target/test-classes/activiti.cfg.xml" />
                   </tasks>
                 </configuration>
               </execution>
@@ -777,7 +782,7 @@
                   <tasks>
                     <echo message="dropping schema in ${databasewithschema}" />
                     <java classname="org.activiti.engine.impl.db.DbSchemaDrop"
-                      classpathref="maven.test.classpath" />
+                          classpathref="maven.test.classpath" />
                   </tasks>
                 </configuration>
               </execution>
@@ -791,7 +796,7 @@
                   <tasks>
                     <echo message="dropping schema in ${databasewithschema}" />
                     <java classname="org.activiti.engine.impl.db.DbSchemaDrop"
-                      classpathref="maven.test.classpath" />
+                          classpathref="maven.test.classpath" />
                   </tasks>
                 </configuration>
               </execution>
@@ -819,9 +824,9 @@
                 <configuration>
                   <tasks>
                     <echo
-                      message="updating activiti configuration to qa/cfg/historyaudit.activiti.cfg.xml" />
+                        message="updating activiti configuration to qa/cfg/historyaudit.activiti.cfg.xml" />
                     <copy file="${basedir}/../../qa/cfg/historyaudit.activiti.cfg.xml"
-                      tofile="target/test-classes/activiti.cfg.xml" overwrite="true" />
+                          tofile="target/test-classes/activiti.cfg.xml" overwrite="true" />
                   </tasks>
                 </configuration>
               </execution>
@@ -864,9 +869,9 @@
                 <configuration>
                   <tasks>
                     <echo
-                      message="updating activiti configuration to qa/cfg/historynone.activiti.cfg.xml" />
+                        message="updating activiti configuration to qa/cfg/historynone.activiti.cfg.xml" />
                     <copy file="${basedir}/../../qa/cfg/historynone.activiti.cfg.xml"
-                      tofile="target/test-classes/activiti.cfg.xml" overwrite="true" />
+                          tofile="target/test-classes/activiti.cfg.xml" overwrite="true" />
                   </tasks>
                 </configuration>
               </execution>
@@ -952,7 +957,7 @@
                   <tasks>
                     <echo message="dropping schema in ${metadatabase}" />
                     <ant antfile="${basedir}/../../qa/db/build.xml" target="drop.db.schema"
-                      inheritAll="false">
+                         inheritAll="false">
                       <property name="test_classpath" refid="maven.test.classpath" />
                       <property name="database" value="${metadatabase}" />
                     </ant>
@@ -964,7 +969,7 @@
         </plugins>
       </build>
     </profile>
-    
+
     <!--  check with optimization flags set -->
     <profile>
       <id>cfgOptimizations</id>
