--- a/modules/activiti-ui/activiti-app-logic/pom.xml
+++ b/modules/activiti-ui/activiti-app-logic/pom.xml
@@ -77,6 +77,10 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
 
     <!-- JSON -->
     <dependency>
