--- a/modules/activiti-mule/pom.xml
+++ b/modules/activiti-mule/pom.xml
@@ -10,10 +10,7 @@
   <artifactId>activiti-mule</artifactId>
   <name>Activiti - Mule</name>
   <properties>
-    <log4j.version>2.8.2</log4j.version>
-    <activiti.artifact>
-      org.activiti.mule
-    </activiti.artifact>
+    <activiti.artifact>org.activiti.mule</activiti.artifact>
   </properties>
   <build>
     <resources>
@@ -101,58 +98,6 @@
       </plugins>
     </pluginManagement>
   </build>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-api</artifactId>
-        <version>${log4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core</artifactId>
-        <version>${log4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-slf4j-impl</artifactId>
-        <version>${log4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-1.2-api</artifactId>
-        <version>${log4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-jul</artifactId>
-        <version>${log4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mule</groupId>
-        <artifactId>mule-core</artifactId>
-        <version>${mule.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-jcl</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.mule</groupId>
-        <artifactId>mule-core</artifactId>
-        <version>${mule.version}</version>
-        <classifier>tests</classifier>
-        <exclusions>
-          <exclusion>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-jcl</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>org.activiti</groupId>
@@ -231,12 +176,6 @@
       <groupId>org.mule</groupId>
       <artifactId>mule-core</artifactId>
       <scope>provided</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-jcl</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.mule.modules</groupId>
@@ -269,7 +208,6 @@
       <id>mulesoft-releases</id>
       <name>MuleSoft Releases Repository</name>
       <url>https://repository-master.mulesoft.org/nexus/content/groups/public/</url>
-      <layout>default</layout>
     </repository>
   </repositories>
 </project>
