--- a/modules/activiti-crystalball/pom.xml
+++ b/modules/activiti-crystalball/pom.xml
@@ -84,7 +84,6 @@
       <groupId>org.activiti</groupId>
       <artifactId>activiti-engine</artifactId>
     </dependency>
-
     <!-- logger -->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -95,8 +94,8 @@
       <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
       <scope>test</scope>
     </dependency>
     <!-- test -->
