--- a/modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-basic/pom.xml
+++ b/modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-basic/pom.xml
@@ -46,8 +46,8 @@
           <artifactId>slf4j-api</artifactId>
         </exclusion>
         <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
         </exclusion>
       </exclusions>
       <optional>true</optional>
