--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
     <hibernate.version>4.2.16.Final</hibernate.version>
     <jackson.version>2.9.4</jackson.version>
     <jetty.version>9.2.24.v20180105</jetty.version>
-    <logback.version>1.2.0</logback.version>
+    <log4j2.version>2.8.2</log4j2.version>
+    <logback.version>1.2.3</logback.version>
     <mule.version>3.7.0</mule.version>
     <spring.version>4.3.14.RELEASE</spring.version>
     <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
@@ -87,9 +88,9 @@
         <type>pom</type>
       </dependency>
       <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-bom</artifactId>
+        <version>${log4j2.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -396,6 +397,24 @@
         <groupId>org.mule</groupId>
         <artifactId>mule-core</artifactId>
         <version>${mule.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-jcl</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.mule</groupId>
+        <artifactId>mule-core</artifactId>
+        <version>${mule.version}</version>
+        <classifier>tests</classifier>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-jcl</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.mule.tests</groupId>
@@ -416,12 +435,6 @@
         <groupId>org.mule.modules</groupId>
         <artifactId>mule-module-scripting</artifactId>
         <version>${mule.version}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-          </exclusion>
-        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.mule.modules</groupId>
@@ -574,12 +587,19 @@
       <dependency>
         <groupId>com.fasterxml.uuid</groupId>
         <artifactId>java-uuid-generator</artifactId>
-        <version>3.1.3</version>
+        <version>3.1.4</version>
       </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
         <artifactId>bcprov-jdk15on</artifactId>
         <version>${bouncycastle.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -668,6 +688,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>${maven-javadoc-plugin.version}</version>
+          <configuration>
+            <quiet>true</quiet>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
