updated jgraphx to fix CVE-2017-18197 vulnerability #1817

--- a/modules/activiti-bpmn-layout/pom.xml
+++ b/modules/activiti-bpmn-layout/pom.xml
@@ -19,6 +19,16 @@
     </activiti.artifact>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <build>
     <plugins>
       <plugin>
@@ -100,9 +110,9 @@
       <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.tinyjee.jgraphx</groupId>
+      <groupId>com.github.jgraph</groupId>
       <artifactId>jgraphx</artifactId>
-      <version>1.10.4.1</version>
+      <version>v3.9.3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
