added temporary dependency check exclusion for CVE-2018-7489 Activiti/Activiti#1838

--- a/modules/activiti-bpmn-converter/pom.xml
+++ b/modules/activiti-bpmn-converter/pom.xml
@@ -20,6 +20,7 @@
     <activiti.osgi.export.additional>
       org.activiti.bpmn.constants,org.activiti.bpmn.util,org.activiti.bpmn.exceptions
     </activiti.osgi.export.additional>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
