--- a/modules/activiti-bpmn-model/pom.xml
+++ b/modules/activiti-bpmn-model/pom.xml
@@ -20,6 +20,7 @@
     <activiti.osgi.import.additional>
       org.apache.commons.lang;resolution:=optional
     </activiti.osgi.import.additional>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
