--- a/modules/activiti-camel/pom.xml
+++ b/modules/activiti-camel/pom.xml
@@ -19,6 +19,7 @@
     <activiti.artifact>
       org.activiti.camel
     </activiti.artifact>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <dependencies>
