--- a/modules/activiti-json-converter/pom.xml
+++ b/modules/activiti-json-converter/pom.xml
@@ -20,6 +20,7 @@
     <activiti.osgi.export.additional>
       org.activiti.editor*
     </activiti.osgi.export.additional>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
