--- a/modules/activiti-ldap/pom.xml
+++ b/modules/activiti-ldap/pom.xml
@@ -16,6 +16,7 @@
     <activiti.artifact>
       org.activiti.ldap
     </activiti.artifact>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
   <dependencies>
     <dependency>
