--- a/modules/activiti-simple-workflow-alfresco/pom.xml
+++ b/modules/activiti-simple-workflow-alfresco/pom.xml
@@ -13,6 +13,10 @@
     <version>5.23.0-SNAPSHOT</version>
   </parent>
 
+  <properties>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
+  </properties>
+
   <dependencies>
     <!-- BPMN model conversion -->
     <dependency>
