--- a/modules/activiti-cxf/pom.xml
+++ b/modules/activiti-cxf/pom.xml
@@ -13,6 +13,7 @@
     <activiti.artifact>
       org.activiti.cxf
     </activiti.artifact>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
   <build>
     <resources>
