--- a/modules/activiti-rest/pom.xml
+++ b/modules/activiti-rest/pom.xml
@@ -16,6 +16,7 @@
     <activiti.artifact>
       org.activiti.rest.service
     </activiti.artifact>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
   </properties>
 
   <build>
