--- a/modules/activiti-webapp-explorer2/pom.xml
+++ b/modules/activiti-webapp-explorer2/pom.xml
@@ -14,6 +14,10 @@
   <packaging>war</packaging>
   <name>Activiti - Webapp - Explorer V2</name>
 
+  <properties>
+    <suppressionFile>${basedir}/../../dependency-check-suppression.xml</suppressionFile>
+  </properties>
+
   <repositories>
     <repository>
       <id>vaadin-addons</id>
